fix .buttons' border-radius being cutoff

--- a/web/main/main.css
+++ b/web/main/main.css
@@ -5,8 +5,8 @@
   border-radius: 4px;
   animation: none !important;
   width: calc(100% - 40px);
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .array {
   display: flex;
